--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mysql:
     image: mysql:5.7.27
     volumes:
-      - db-data:/var/lib/mysql/data
+      - db-data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: abc123
       MYSQL_DATABASE: etsiinfbot
