--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       MYSQL_ROOT_PASSWORD: abc123
       MYSQL_DATABASE: etsiinfbot
 
+    command: "--character-set-server=utf8mb4 --skip-character-set-client-handshake=1"
+
   etsiinfbot:
     build:
       context: ./etsiinfbot-docker
